# animation-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp  objects.hpp  scene.hpp
